@@ -31,16 +31,16 @@ void scan_find(const class scanner_params &sp,const recursion_control_block &rcb
 	 */
 	feature_recorder *f = sp.fs.get_name("find");
 
-	u_char *tmpbuf = (u_char *)malloc(sp.sbuf.bufsize+1);
-	if(!tmpbuf) return;				     // no memory for searching
-	memcpy(tmpbuf,sp.sbuf.buf,sp.sbuf.bufsize);
-	tmpbuf[sp.sbuf.bufsize]=0;
+	managed_malloc<u_char>tmpbuf(sp.sbuf.bufsize+1);
+	if(!tmpbuf.buf) return;				     // no memory for searching
+	memcpy(tmpbuf.buf,sp.sbuf.buf,sp.sbuf.bufsize);
+	tmpbuf.buf[sp.sbuf.bufsize]=0;
 	for(size_t pos=0;pos<sp.sbuf.pagesize && pos<sp.sbuf.bufsize;){
 	    /* Now see if we can find a string */
 	    string found;
 	    size_t offset=0;
 	    size_t len = 0;
-            if(find_list.check((const char *)tmpbuf+pos,&found,&offset,&len)){
+            if(find_list.check((const char *)tmpbuf.buf+pos,&found,&offset,&len)){
 		if(len==0){
 		    len+=1;
 		    continue;
@@ -49,11 +49,10 @@ void scan_find(const class scanner_params &sp,const recursion_control_block &rcb
 		pos += offset+len;
 	    } else {
 		/* nothing was found; skip past the first \0 and repeat. */
-		const u_char *eos = (const u_char *)memchr(tmpbuf+pos,'\000',sp.sbuf.bufsize-pos);
-		if(eos) pos=(eos-tmpbuf)+1;		// skip 1 past the \0
+		const u_char *eos = (const u_char *)memchr(tmpbuf.buf+pos,'\000',sp.sbuf.bufsize-pos);
+		if(eos) pos=(eos-tmpbuf.buf)+1;		// skip 1 past the \0
 		else    pos=sp.sbuf.bufsize;	// skip to the end of the buffer
 	    }
 	}
-	free(tmpbuf);
     }
 }
