@@ -54,8 +54,5 @@ void scan_xor(const class scanner_params &sp,const recursion_control_block &rcb)
     
         // call scanners on deobfuscated buffer
         (*rcb.callback)(child_params);
-        if(rcb.returnAfterFound) {
-            return;
-        }
     }
 }
