@@ -155,9 +155,6 @@ inline void scan_zip_component(const class scanner_params &sp,const recursion_co
                 scanner_params spnew(sp,sbuf_new); // scanner_params that points to the sbuf
                 
                 (*rcb.callback)(spnew);                // process the sbuf
-                if(rcb.returnAfterFound){
-                    return;
-                }
             }
             r = inflateEnd(&zs);
         } else {
